  + Features:
    * [#43] Show calls start and finish time according to project time zone
    * [#33] Add text annotation for recorded audio
  + Bugs:
    * [#48] improve call log status
    * [#46] fix SMS step in erlang
    * [#45] show number of retries in call logs
    * [#50] remove column id and queued call from call logs
    * [#23] fix problem on call duration calculation

1.3.3 (2013-11-05 kakada <kakada@instedd.org)
  + Bugs:
    * [#37] Log fusion table datetime field in project timezone

1.3.2 (2013-11-04 kakada <kakada@instedd.org)
  + Bugs:
    * [Bug 38] fix view channel detail when it's belongs to nil call flow

1.3.1 (2013-11-04 kakada <kakada@instedd.org)
  + Bugs:
    * [Bug 35] fix call log recorded audio in record step

1.3.0-rc (2013-11-04 kakada <kakada@instedd.org)
  + Features:
    * [Feature 28] move backend to new broker
    * [Feature 32] add protocol and port to SIP channel
    * [Feature 27] create template javascript for phone number field
    * [Feature 25] allow user to search in phone books by phone number
    * [Feature 22] session variables call log
    * [Feature 21] store result of record step
    * [Feature 20] handle date step
    * [Feature 19] handle register step
    * [Feature 18] handle deregister step
    
  + Bugs:
    * [Bug 31] fix phone number field in reminder group view to allow user input only phone number format
    * [Bug 30] fix retries schedule after pull update from InSTEDD's repo
    * [Bug 26] fix retries schedule on enqueue outgoing call

1.2.2 (2013-09-30 Kakada <kakada@instedd.org)
  + Bugs:
    * [Bug 18] fix bug reminder group's deserialized array
    * [Bug 17] allow reminder group's address UI enter only phone number pattern ([+][0-9])

1.2.0 (2013-09-27 Kakada <kakada@instedd.org)
  + Features:
    * add retries schedule into reminder schedule
    * allow register step to register other phone number
    * add help link to navigation menu
    * import CSV to reminder group