@@ -20,4 +20,10 @@ namespace :reminder do
       f.puts "finished at #{DateTime.now.utc.to_s}"
     end
 	end
+
+  desc "migrate reminder schedule to support channel-suggestion"
+  task :migrate_channel => :environment do
+    Ext::ReminderSchedule.channel_migrate_reminder_schedule
+  end
+
 end
